Set up a Vue instance of product index and search
