# public/openapi.yaml
@@ -100,6 +100,49 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Product'
+      parameters:
+        - name: filter[name]
+          in: query
+          description: Selection of the products those names have been specified by a user
+          required: false
+          schema:
+            type: string
+        - name: filter[category_id]
+          in: query
+          description: Selection of the houses with requested category_id
+          required: false
+          schema:
+            type: integer
+        - name: filter[price-gte]
+          in: query
+          description: Selection of the houses without those whose price is greater than requested
+          required: false
+          schema:
+            type: number
+        - name: filter[price-lte]
+          in: query
+          description: Selection of the houses without those whose price is lower than requested
+          required: false
+          schema:
+            type: number
+        - name: filter[weight]
+          in: query
+          description: Selection of the houses with requested weight
+          required: false
+          schema:
+            type: number
+        - name: filter[length]
+          in: query
+          description: Selection of the houses with requested length
+          required: false
+          schema:
+            type: number
+        - name: filter[width]
+          in: query
+          description: Selection of the houses with requested width
+          required: false
+          schema:
+            type: integer
   /listing-categories/tree:
     get:
       summary: Returns a tree of categories (nested structure).
@@ -191,7 +234,7 @@ components:
         message:
           type: string
     Product:
-      required: [id, name, slug, description, category_id, price, weight, length, width]
+      required: [id, name, slug, description, category_id, category_name, price, weight, length, width]
       type: object
       properties:
         id:
@@ -205,8 +248,10 @@ components:
           nullable: true
         category_id:
           type: integer
+        category_name:
+          type: string
         price:
-          type: number
+          type: string
         weight:
           type: number
           nullable: true
